# ragtime

./: docker-compose.yaml  pyproject.toml
ragtime/: old_world_rules3.csv  playground.ipynb
